Remove outdated images and update gallery items with new content

--- a/index.html
+++ b/index.html
@@ -277,31 +277,31 @@
 
         <!-- Works Gallery Single Item Start -->
         <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/works/Christmas.jpg" data-image="img/works/Christmas.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
-              <img src="img/works/Christmas.jpg" class="gallery__image" itemprop="thumbnail" alt="Social media post celebrating Christmas">
+          <a href="img/works/ROD.jpg" data-image="img/works/ROD.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
+              <img src="img/works/ROD.jpg" class="gallery__image" itemprop="thumbnail" alt="Logo Design">
           </a>
           <figcaption class="gallery__descr" itemprop="caption description">
               <h5>Christmas</h5>
               <div class="card__tags d-flex flex-wrap">
-                  <span class="rounded-tag opposite">Social Media Post</span>
+                  <span class="rounded-tag opposite">Logo Design</span>
               </div>
-              <p class="small">A festive social media post designed for Christmas celebrations.</p>
+              <p class="small">Logo design for <a href="https://roadofdigital.com/" class="text-link-bold" target="_blank">Road of Digital.</a> </p>
           </figcaption>
         </figure>
         <!-- Works Gallery Single Item End -->
 
         <!-- Works Gallery Single Item Start -->
         <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/works/Pubg.jpg" data-image="img/works/Pubg.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
-              <img src="img/works/Pubg.jpg" class="gallery__image" itemprop="thumbnail" alt="Photo manipulation of a PUBG Mobile player">
+          <a href="img/works/Skill_bhaitika.jpg" data-image="img/works/Skill_bhaitika.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
+              <img src="img/works/Skill_bhaitika.jpg" class="gallery__image" itemprop="thumbnail" alt="Social media post for skill training nepal">
           </a>
           <figcaption class="gallery__descr" itemprop="caption description">
               <h5>PUBG Mobile</h5>
               <div class="card__tags d-flex flex-wrap">
-                  <span class="rounded-tag opposite">Photo Manipulation</span>
+                  <span class="rounded-tag opposite">Social Media Post</span>
               </div>
-              <p class="small">A photo manipulation showcasing a PUBG Mobile gaming scene.</p>
-          </figcaption>
+              <p class="small">A Social Media post of Bhaitika festival for <a href="https://skilltrainingnepal.com/" class="text-link-bold" target="_blank">Skill Training Nepal</a></p>
+            </figcaption>
         </figure>
         <!-- Works Gallery Single Item End -->
 
