--- a/index.html
+++ b/index.html
@@ -515,8 +515,7 @@
   <h2 class="h2__title animate-in-up">Education and practical experience</h2>
   <p class="h2__text animate-in-up">
     Be what you would seem to be - or, if you'd like it put more simply - never imagine yourself not to be otherwise 
-    than what it might appear to others that what you were or 
-    <a href="#0" class="text-link">might have been</a> 
+    than what it might appear to others that what you were or might have been
     was not otherwise than what you had been 
     would have appeared to them to be otherwise.
   </p>
