Update gallery item titles in index.html

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               <img src="img/works/ROD.jpg" class="gallery__image" itemprop="thumbnail" alt="Logo Design">
           </a>
           <figcaption class="gallery__descr" itemprop="caption description">
-              <h5>Christmas</h5>
+              <h5>Road of Digital</h5>
               <div class="card__tags d-flex flex-wrap">
                   <span class="rounded-tag opposite">Logo Design</span>
               </div>
@@ -296,7 +296,7 @@
               <img src="img/works/Skill_bhaitika.jpg" class="gallery__image" itemprop="thumbnail" alt="Social media post for skill training nepal">
           </a>
           <figcaption class="gallery__descr" itemprop="caption description">
-              <h5>PUBG Mobile</h5>
+              <h5>Festival Post</h5>
               <div class="card__tags d-flex flex-wrap">
                   <span class="rounded-tag opposite">Social Media Post</span>
               </div>
