Add canonical link to improve SEO

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Explore Sandesh Shrestha's portfolio showcasing graphic design, logo creation, and branding services aimed at impactful visual communication.">
     <meta name="keywords" content="Sandesh Shrestha, graphic design portfolio, logo design, branding services, graphic design services, illustration design, print design, digital graphics">
     <meta name="author" content="Sandesh Shrestha">
-
+    <link rel="canonical" href="https://sandeshshrestha.xyz/" />
     <!-- Viewport Meta-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
