Update specialization title from "Graphic & Motion Designer" to "Graphic Design"

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="avatar__block">
       <h6>
         <small class="top">Specialization:</small>
-        Graphic & Motion Designer
+        Graphic Design
       </h6>
     </div>
     
