Add responsive popup notification for mobile users

--- a/index.html
+++ b/index.html
@@ -46,6 +46,86 @@
   </head>
 
   <body>
+    <div id="popup" style="
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(10px);
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    animation: fadeIn 0.3s ease-in-out;
+">
+    <div style="
+        background: rgba(44, 44, 44, 0.9);
+        color: white;
+        padding: 25px;
+        border-radius: 12px;
+        text-align: center;
+        width: 85%;
+        max-width: 400px;
+        box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
+        position: relative;
+        font-family: Arial, sans-serif;
+        opacity: 0;
+        transform: translateY(-20px);
+        animation: slideIn 0.3s ease-in-out forwards;
+    ">
+        <button onclick="closePopup()" style="
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: none;
+            border: none;
+            color: white;
+            font-size: 22px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: 0.3s;
+        ">&times;</button>
+        <h2 style="margin-top: 10px; font-size: 20px;">📢 Attention!</h2>
+        <p style="font-size: 16px; margin: 10px 0;">
+            This website is best viewed on a desktop for the best experience.
+        </p>
+    </div>
+</div>
+
+<script>
+    function showPopup() {
+        if (!sessionStorage.getItem("popupClosed") && window.innerWidth < 768) {
+            document.getElementById("popup").style.display = "flex";
+        }
+    }
+
+    function closePopup() {
+        document.getElementById("popup").style.display = "none";
+        sessionStorage.setItem("popupClosed", "true");
+    }
+
+    setTimeout(showPopup, 1500); // Delay of 1.5 seconds
+</script>
+
+<style>
+    @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+    }
+
+    @keyframes slideIn {
+        from { opacity: 0; transform: translateY(-20px); }
+        to { opacity: 1; transform: translateY(0); }
+    }
+
+    button:hover {
+        opacity: 0.8;
+        transform: scale(1.1);
+    }
+</style>
 
     <!-- Loader Start -->
     <div id="loader" class="loader">
@@ -97,6 +177,7 @@
         </nav>
       </div>
       <!-- Navigation Menu End -->
+
 
       <!-- Header Controls Start -->
       <div class="header__controls d-flex justify-content-end">
