Remove outdated image files and update references to new webp formats

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="Sandesh Shrestha: Graphic Design & Logo Portfolio">
     <meta property="og:description" content="Explore Sandesh Shrestha's portfolio showcasing graphic design, logo creation, and branding services aimed at impactful visual communication.">
     <meta property="og:url" content="https://www.sandeshshrestha.xyz/">
-    <meta property="og:image" content="https://www.sandeshshrestha.xyz//img/me.jpg">
+    <meta property="og:image" content="https://www.sandeshshrestha.xyz/img/me.webp">
     <!-- Facebook Metadata End -->
 
     <!-- Template Styles Start -->
@@ -226,7 +226,7 @@
       <div class="avatar__logo d-flex justify-content-center">
       </div>
       <div class="avatar__image">
-        <img src="img/me.jpg" alt="Sandesh Shrestha">
+        <img src="img/me.webp" alt="Sandesh Shrestha">
       </div>
     </div>
     <!-- Specialization -->
@@ -346,8 +346,8 @@
 
         <!-- Works Gallery Single Item Start -->
         <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/works/luffy.jpg" data-image="img/works/luffy.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
-              <img src="img/works/luffy.jpg" class="gallery__image" itemprop="thumbnail" alt="Digital artwork of Monkey D. Luffy from One Piece">
+          <a href="img/works/luffy.webp" data-image="img/works/luffy.webp" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
+              <img src="img/works/luffy.webp" class="gallery__image" itemprop="thumbnail" alt="Digital artwork of Monkey D. Luffy from One Piece">
           </a>
           <figcaption class="gallery__descr" itemprop="caption description">
               <h5>Monkey D. Luffy</h5>
@@ -361,8 +361,8 @@
 
         <!-- Works Gallery Single Item Start -->
         <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/works/Dreams.jpg" data-image="img/works/Dreams.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
-              <img src="img/works/Dreams.jpg" class="gallery__image" itemprop="thumbnail" alt="Poster design titled 'Dreams'">
+          <a href="img/works/dreams.webp" data-image="img/works/Dreams.webp" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
+              <img src="img/works/dreams.webp" class="gallery__image" itemprop="thumbnail" alt="Poster design titled 'Dreams'">
           </a>
           <figcaption class="gallery__descr" itemprop="caption description">
               <h5>Dreams</h5>
@@ -376,8 +376,8 @@
 
         <!-- Works Gallery Single Item Start -->
         <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/works/ROD.jpg" data-image="img/works/ROD.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
-              <img src="img/works/ROD.jpg" class="gallery__image" itemprop="thumbnail" alt="Logo Design">
+          <a href="img/works/dreams.webp" data-image="img/works/ROD.webp" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
+              <img src="img/works/rod.webp" class="gallery__image" itemprop="thumbnail" alt="Logo Design">
           </a>
           <figcaption class="gallery__descr" itemprop="caption description">
               <h5>Road of Digital</h5>
@@ -391,8 +391,8 @@
 
         <!-- Works Gallery Single Item Start -->
         <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/works/Skill_bhaitika.jpg" data-image="img/works/Skill_bhaitika.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
-              <img src="img/works/Skill_bhaitika.jpg" class="gallery__image" itemprop="thumbnail" alt="Social media post for skill training nepal">
+          <a href="img/works/skill-bhaitika.webp" data-image="img/works/Skill_bhaitika.webp" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
+              <img src="img/works/skill-bhaitika.webp" class="gallery__image" itemprop="thumbnail" alt="Social media post for skill training nepal">
           </a>
           <figcaption class="gallery__descr" itemprop="caption description">
               <h5>Festival Post</h5>
