Update page title and meta description for improved SEO and clarity

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
 
     <!-- Page Title -->
-    <title>Sandesh Shrestha | Graphic Design & Logo Portfolio</title>
+    <title>Sandesh Shrestha - Creative Graphic Designer - Portfolio & Testimonials</title>
 
     <!-- Meta Tags -->
-    <meta name="description" content="Explore Sandesh Shrestha's portfolio showcasing graphic design, logo creation, and branding services aimed at impactful visual communication.">
+    <meta name="description" content="Sandesh Shrestha, Graphic Designer in Kathmandu, Nepal. Specializing in graphic design, motion graphics, and video editing. Let's create impactful visuals together! Contact for collaborations.">
     <meta name="keywords" content="Sandesh Shrestha, graphic design portfolio, logo design, branding services, graphic design services, illustration design, print design, digital graphics">
     <meta name="author" content="Sandesh Shrestha">
     <link rel="canonical" href="https://sandeshshrestha.xyz/" />
