Update meta description and keywords for improved clarity and SEO

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
+<head>
+  <meta charset="UTF-8">
+  
+  <!-- Page Title -->
+  <title>Sandesh Shrestha - Creative Graphic Designer - Portfolio & Testimonials</title>
 
-    <!-- Page Title -->
-    <title>Sandesh Shrestha - Creative Graphic Designer - Portfolio & Testimonials</title>
-
-    <!-- Meta Tags -->
-    <meta name="description" content="Sandesh Shrestha, Graphic Designer in Kathmandu, Nepal. Specializing in graphic design, motion graphics, and video editing. Let's create impactful visuals together! Contact for collaborations.">
-    <meta name="keywords" content="Sandesh Shrestha, graphic design portfolio, logo design, branding services, graphic design services, illustration design, print design, digital graphics">
-    <meta name="author" content="Sandesh Shrestha">
-    <link rel="canonical" href="https://sandeshshrestha.xyz/" />
+  <!-- Meta Tags -->
+  <meta name="description" content="Sandesh Shrestha, a creative graphic designer specializing in branding, motion graphics, and video editing. Contact for collaborations.">
+  <meta name="keywords" content="graphic design, branding, motion graphics, illustration, print design">
+  <meta name="author" content="Sandesh Shrestha">
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.sandeshshrestha.xyz/" />
     <!-- Viewport Meta-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
