Update blog link and modify gallery item description for clarity

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               </a>
             </li>
             <li class="menu__item">
-              <a class="menu__link btn" href="https://blog.sandeshshrestha.xyz/">
+              <a class="menu__link btn" href="https://sandeshshrestha77.com.np/">
                 <span class="menu__caption">Blog</span>
                 <i class="ph-bold ph-envelope"></i>
               </a>
@@ -362,15 +362,15 @@
 
         <!-- Works Gallery Single Item Start -->
         <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/works/Dreams.jpg" data-image="img/works/Dreams.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
-              <img src="img/works/Dreams.jpg" class="gallery__image" itemprop="thumbnail" alt="Poster design titled 'Dreams'">
+          <a href="img/works/Elegance in Shadows.jpg" data-image="img/works/Elegance in Shadows.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
+              <img src="img/works/Elegance in Shadows.jpg" class="gallery__image" itemprop="thumbnail" alt="Poster design titled 'Dreams'">
           </a>
           <figcaption class="gallery__descr" itemprop="caption description">
               <h5>Dreams</h5>
               <div class="card__tags d-flex flex-wrap">
                   <span class="rounded-tag opposite">Poster</span>
               </div>
-              <p class="small">A creative poster design inspired by the concept of dreams.</p>
+              <p class="small">A creative poster design inspired by the concept of Beauty in mystery, power in silence. .</p>
           </figcaption>
         </figure>
         <!-- Works Gallery Single Item End -->
