Fix typo in poster design description for clarity

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
               <div class="card__tags d-flex flex-wrap">
                   <span class="rounded-tag opposite">Poster</span>
               </div>
-              <p class="small">A creative poster design inspired by the concept of Beauty in mystery, power in silence. .</p>
+              <p class="small">A creative poster design inspired by the concept of Beauty in mystery, power in silence.</p>
           </figcaption>
         </figure>
         <!-- Works Gallery Single Item End -->
