--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
 
         <!-- Works Gallery Single Item Start -->
         <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/works/Elegance in Shadows.jpg" data-image="img/works/Elegance in Shadows.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
-              <img src="img/works/Elegance in Shadows.jpg" class="gallery__image" itemprop="thumbnail" alt="Poster design titled 'Dreams'">
+          <a href="img/works/Elegance in Shadows.jpg" data-image="img/works/Elegance in Shadows.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1350">
+              <img src="img/works/Elegance in Shadows.jpg" class="gallery__image" itemprop="thumbnail" alt="Poster design titled 'Elegance in Shadows'">
           </a>
           <figcaption class="gallery__descr" itemprop="caption description">
               <h5>Dreams</h5>
