--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
       </figure>
 
       <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="img/works/Elegance in Shadows.jpg" data-image="img/works/Elegance in Shadows.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1350">
-          <img src="img/works/Elegance in Shadows.jpg" class="gallery__image" itemprop="thumbnail" alt="Poster design titled 'Elegance in Shadows'" loading="lazy">
+        <a href="img/works/Elegance_in_Shadows.jpg" data-image="img/works/Elegance_in_Shadowsjpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1350">
+          <img src="img/works/Elegance_in_Shadows.jpg" class="gallery__image" itemprop="thumbnail" alt="Poster design titled 'Elegance in Shadows'" loading="lazy">
         </a>
         <figcaption class="gallery__descr" itemprop="caption description">
           <h5>Dreams</h5>
