--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="mobile-web-app-capable" content="yes">
   <meta charset="UTF-8">
   <title>Sandesh Shrestha - Creative Graphic Designer - Portfolio & Testimonials</title>
   <meta name="description" content="Sandesh Shrestha, a creative graphic designer specializing in branding, motion graphics, and video editing. Contact for collaborations.">
@@ -94,6 +95,7 @@
             <a class="menu__link btn" href="#home">
               <span class="menu__caption">Home</span>
               <i class="ph-bold ph-house-simple"></i>
+              <span>View Project</span>
             </a>
           </li>
           <li class="menu__item">
@@ -119,13 +121,13 @@
               <span class="menu__caption">Contact</span>
               <i class="ph-bold ph-envelope"></i>
             </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link btn" href="https://sandeshshrestha77.com.np/">
+            </li>
+            <li class="menu__item"></li>
+              <a class="menu__link btn" href="https://sandeshshrestha77.com.np/">
               <span class="menu__caption">Blog</span>
-              <i class="ph-bold ph-envelope"></i>
-            </a>
-          </li>
+              <i class="ph-bold ph-article"></i>
+              </a>
+            </li>
         </ul>
       </nav>
     </div>
@@ -235,83 +237,81 @@
             <span>Portfolio</span>
           </p>
           <h2 class="h2__title animate-in-up">Check out my featured projects</h2>
+        <div class="content__block grid-block text-start"></div>
+          <div class="container-fluid px-0 inner__gallery">
+            <div class="row gx-0 my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+              <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="img/works/luffy.jpg" data-image="img/works/luffy.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
+            <img src="img/works/luffy.jpg" class="gallery__image" itemprop="thumbnail" alt="Digital artwork of Monkey D. Luffy from One Piece" loading="lazy">
+          </a>
+          <figcaption class="gallery__descr" itemprop="caption description">
+            <h5>Monkey D. Luffy</h5>
+            <div class="card__tags d-flex flex-wrap">
+              <span class="rounded-tag opposite">Illustrations</span>
+            </div>
+            <p class="small">A digital artwork of Monkey D. Luffy, the main character from One Piece.</p>
+          </figcaption>
+              </figure>
+
+              <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="img/works/Illusion.jpg" data-image="img/works/Illusion.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1350">
+            <img src="img/works/Illusion.jpg" class="gallery__image" itemprop="thumbnail" alt="Poster design titled 'Illusion'" loading="lazy">
+          </a>
+          <figcaption class="gallery__descr" itemprop="caption description">
+            <h5>Illusion</h5>
+            <div class="card__tags d-flex flex-wrap">
+              <span class="rounded-tag opposite">Poster</span>
+            </div>
+            <p class="small">A creative poster design inspired by the concept of Illusion.</p>
+          </figcaption>
+              </figure>
+
+              <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="img/works/Elegance_in_Shadows.jpg" data-image="img/works/Elegance_in_Shadows.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1350">
+            <img src="img/works/Elegance_in_Shadows.jpg" class="gallery__image" itemprop="thumbnail" alt="Poster design titled 'Elegance in Shadows'" loading="lazy">
+          </a>
+          <figcaption class="gallery__descr" itemprop="caption description">
+            <h5>Elegance in Shadows</h5>
+            <div class="card__tags d-flex flex-wrap">
+              <span class="rounded-tag opposite">Poster</span>
+            </div>
+            <p class="small">A creative poster design inspired by the concept of Beauty in mystery, power in silence.</p>
+          </figcaption>
+              </figure>
+
+              <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="img/works/ROD.jpg" data-image="img/works/ROD.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
+            <img src="img/works/ROD.jpg" class="gallery__image" itemprop="thumbnail" alt="Logo Design" loading="lazy">
+          </a>
+          <figcaption class="gallery__descr" itemprop="caption description">
+            <h5>Road of Digital</h5>
+            <div class="card__tags d-flex flex-wrap">
+              <span class="rounded-tag opposite">Logo Design</span>
+            </div>
+            <p class="small">Logo design for <a href="https://roadofdigital.com/" class="text-link-bold" target="_blank">Road of Digital.</a></p>
+          </figcaption>
+              </figure>
+
+              <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="img/works/Skill_bhaitika.jpg" data-image="img/works/Skill_bhaitika.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
+            <img src="img/works/Skill_bhaitika.jpg" class="gallery__image" itemprop="thumbnail" alt="Social media post for skill training nepal" loading="lazy">
+          </a>
+          <figcaption class="gallery__descr" itemprop="caption description">
+            <h5>Festival Post</h5>
+            <div class="card__tags d-flex flex-wrap">
+              <span class="rounded-tag opposite">Social Media Post</span>
+            </div>
+            <p class="small">A Social Media post of Bhaitika festival for <a href="https://skilltrainingnepal.com/" class="text-link-bold" target="_blank">Skill Training Nepal</a></p>
+          </figcaption>
+              </figure>
+            </div>
+          </div>
+          <div class="text-center mt-4">
+            <a class="btn btn-default btn-hover btn-hover-accent" href="https://www.behance.net/sandeshshrestha11" target="_blank">
+              <span class="btn-caption">View More</span>
+            </a>
+          </div>
         </div>
-
-       <div class="content__block grid-block">
-  <div class="container-fluid px-0 inner__gallery">
-    <div class="row gx-0 my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
-      <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="img/works/luffy.jpg" data-image="img/works/luffy.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
-          <img src="img/works/luffy.jpg" class="gallery__image" itemprop="thumbnail" alt="Digital artwork of Monkey D. Luffy from One Piece" loading="lazy">
-        </a>
-        <figcaption class="gallery__descr" itemprop="caption description">
-          <h5>Monkey D. Luffy</h5>
-          <div class="card__tags d-flex flex-wrap">
-            <span class="rounded-tag opposite">Illustrations</span>
-          </div>
-          <p class="small">A digital artwork of Monkey D. Luffy, the main character from One Piece.</p>
-        </figcaption>
-      </figure>
-
-      <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="img/works/Elegance_in_Shadows.jpg" data-image="img/works/Elegance_in_Shadowsjpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1350">
-          <img src="img/works/Elegance_in_Shadows.jpg" class="gallery__image" itemprop="thumbnail" alt="Poster design titled 'Elegance in Shadows'" loading="lazy">
-        </a>
-        <figcaption class="gallery__descr" itemprop="caption description">
-          <h5>Dreams</h5>
-          <div class="card__tags d-flex flex-wrap">
-            <span class="rounded-tag opposite">Poster</span>
-          </div>
-          <p class="small">A creative poster design inspired by the concept of Beauty in mystery, power in silence.</p>
-        </figcaption>
-      </figure>
-
-      <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="img/works/ROD.jpg" data-image="img/works/ROD.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
-          <img src="img/works/ROD.jpg" class="gallery__image" itemprop="thumbnail" alt="Logo Design" loading="lazy">
-        </a>
-        <figcaption class="gallery__descr" itemprop="caption description">
-          <h5>Road of Digital</h5>
-          <div class="card__tags d-flex flex-wrap">
-            <span class="rounded-tag opposite">Logo Design</span>
-          </div>
-          <p class="small">Logo design for <a href="https://roadofdigital.com/" class="text-link-bold" target="_blank">Road of Digital.</a></p>
-        </figcaption>
-      </figure>
-
-      <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="img/works/Skill_bhaitika.jpg" data-image="img/works/Skill_bhaitika.jpg" class="gallery__link" itemprop="contentUrl" data-size="1080x1080">
-          <img src="img/works/Skill_bhaitika.jpg" class="gallery__image" itemprop="thumbnail" alt="Social media post for skill training nepal" loading="lazy">
-        </a>
-        <figcaption class="gallery__descr" itemprop="caption description">
-          <h5>Festival Post</h5>
-          <div class="card__tags d-flex flex-wrap">
-            <span class="rounded-tag opposite">Social Media Post</span>
-          </div>
-          <p class="small">A Social Media post of Bhaitika festival for <a href="https://skilltrainingnepal.com/" class="text-link-bold" target="_blank">Skill Training Nepal</a></p>
-        </figcaption>
-      </figure>
-    </div>
-  </div>
-</div>
-
-<style>
-  .gallery__image {
-    display: block;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-  }
-  
-  .gallery__item {
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .gallery__link {
-    display: block;
-  }
-</style>
 
       <section id="about" class="inner about">
         <div class="content__block section-grid-title">
