Update social media links in index.html to replace Twitter with Behance

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <a class="socials-square__link btn" href="https://www.instagram.com/sandesh__shrestha" target="_blank"><i class="ph-bold ph-instagram-logo"></i></a>
             </li>
             <li class="socials-square__item">
-              <a class="socials-square__link btn" href="https://twitter.com/sandeshstha8" target="_blank"><i class="ph-bold ph-twitter-logo"></i></a>
+              <a class="socials-square__link btn" href="https://www.behance.net/sandeshshrestha11" target="_blank"><i class="ph-bold ph-behance-logo"></i></a>
             </li>
             <li class="socials-square__item">
               <a class="socials-square__link btn" href="https://github.com/sandeshshrestha77" target="_blank"><i class="ph-bold ph-github-logo"></i></a>
@@ -695,8 +695,8 @@
             </div>
             <div class="socials-cards__item d-flex grid-item-s animate-card-5">
               <div class="socials-cards__card">
-                <i class="ph-bold ph-twitter-logo"></i>
-                <a class="socials-cards__link" href="https://twitter.com/sandeshstha8" target="_blank"></a>
+              <i class="ph-bold ph-behance-logo"></i>
+              <a class="socials-cards__link" href="https://www.behance.net/sandeshshrestha11" target="_blank"></a>
               </div>
             </div>
             <div class="socials-cards__item d-flex grid-item-s animate-card-5">
